C2: assert(_gvn.type(obj)->higher_equal(tjp)) failed: cast_up is no longer needed

XMLWordPrintable

    • b28

        I'm seeing this:

        # Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/parse3.cpp:86), pid=1161731, tid=1161744
        # assert(_gvn.type(obj)->higher_equal(tjp)) failed: cast_up is no longer needed

        when running ctw on https://repo1.maven.org/maven2/org/apache/click/click-nodeps/2.3.0/click-nodeps-2.3.0.jar

        JAVA_OPTIONS="-XX:-TieredCompilation -XX:CICompilerCount=4 -Djava.security.manager=disallow" JAVA_HOME=~/jdk-jdk/build/linux-x86_64-server-fastdebug/images/jdk/ ./ctw.sh /home/roland/tmp/click-nodeps-2.3.0.jar

        Error disappears if 8267807 is reverted

              Assignee:
              Vladimir Ivanov
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: